fix right alignment

--- a/src/sass/_common/footer.scss
+++ b/src/sass/_common/footer.scss
@@ -97,7 +97,6 @@
     }
     .social-icons {
         margin-left: auto;
-        margin-right: -15px;
 
         > *:not(:first-child) {
             margin-left: 10px;
@@ -108,8 +107,8 @@
         }
     }
     .trustlogo2 {
-        float: right;
-        width: 175px;
+        width: 180px;
+        margin-right: -15px;
     }
     .icon-row {
         padding-top: 10px;
